--- a/index.css
+++ b/index.css
@@ -1,183 +1,97 @@
-body { /*Please do not change the color/font of the website so that we all stay uniform for a concistant UX.*/
+/*Please do not change the color/font of the website so that we all stay uniform for a concistant UX.*/
+
+a:focus {
+	outline: none;
+}
+
+body { 
 	color: black;
-	font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 	background-color: #ddd1e7;
 }
 
-h1{
-	font-size: 25pt;
+.dropdown-submenu { /*from menu code*/
+	position: relative;
 }
 
-p {
-	font-size: 15pt;
+.dropdown-submenu .dropdown-menu { /*from menu code*/
+	top: 0;
+	left: 100%;
+	margin-top: -1px;
 }
+
 .edge {
 	margin-top: 2%;
 	margin-left: 2%;
 	margin-right: 2%;
 }
 
-/*Everything below this point is intergral to the header working. Please do not change anything. Thank you.*/
 
-table {
+h1{
+	font-size: 25pt;
+}
+
+.headback{
+	background: #3b1261;
+}
+
+.headtable{
 	width: 100%;
-	color: #6f6f6f;
+}
+
+img.auto{
+	width: 100%;
+}
+
+.menucolor, .btn-default, .btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default, .btn-default:hover, .dropdown-menu li a:focus, .dropdown-menu li a:hover, .btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open>.dropdown-toggle.btn-default.focus, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover{
+	background-color: #9975b9;
+	border-color: #9975b9;
+	color: #595959;
+}
+
+p {
+	font-size: 15pt;
+}
+
+td.logo {
+	width: 20%;
 }
 
 table h1 {
 	font-size: 50pt;
 	text-align: center;
-	text-shadow: 1px 1px 2px #4b517c;
+	color: #595959;
+    font-weight: bold;
 }
 
-td, tr {
-	background: #3b1261;
-}
+@media only screen and (min-width : 1001px) { /*This code alters the format of the menu when the screen is more than 1000px.*/
 
-td.logo {
-	width: 75px;
-}
-
-img {
-	width: 200px;
-}
-
-.headback {
-	background: #3b1261;
-}
-
-* {
-  	margin: 0; 
-	padding: 0;
-	box-sizing: border-box;
-}
-
-#container {
-	position: relative;
-	width: 100%;		
-}
-
-#container:after {
-	content: "";
-	display: block;
-	clear: both;
-	height: 0;
-}
-
-#menu {
-	position: relative;
-	float: left;
-	width: 100%;
-	padding: 0 20px;
-	border-radius: 3px;
-	box-shadow: inset 0 1px 1px rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.15), 0 1px 3px rgba(0,0,0,.15);
-	background: #9975b9; 
-}
-
-#menu, #menu ul {
-	list-style: none;
-}
-
-#menu > li {
-	float: left;
-	position: relative;
-	border-right: 1px solid rgba(0,0,0,.1);
-	box-shadow: 1px 0 0 rgba(255,255,255,.25);
-	perspective: 1000px;
+	td.logo {
+		width: 200px;
+	}
+	
+	.magic {
+		display: none;
+	}
+	
+	.unfold {
+		display: inline;
+	}
+	
+	.unfold li, .unfold li a {
+		display: inline;	
+	}
+	
+	.unfold {
+		position: static;
+	}
 	
 }
 
-#menu > li:first-child {
-	border-left: 1px solid rgba(255,255,255,.25);
-	box-shadow: -1px 0 0 rgba(0,0,0,.1), 1px 0 0 rgba(255,255,255,.25);
-}
-
-#menu a {
-	display: block;
-	position: relative;
-	z-index: 10;
-	padding: 13px 20px 13px 20px;
-	text-decoration: none;
-	color: #6f6f6f;
-	line-height: 1;
-	font-weight: 600;
-	font-size: 15px;
-	letter-spacing: -.01em;
-	background: transparent;
-	text-shadow: 0 1px 1px #2b2b2b;
-	transition: all .25s ease-in-out;
-
-}
-
-#menu > li:hover > a {
-	background: #6f6f6f;
-	color: #3b1261;
-	text-shadow: none;
-}
-
-#menu li ul  {
-	position: absolute;
-	left: 0;
-	z-index: 1;
-	width: 200px;
-	padding: 0;
-	opacity: 0;
-	visibility: hidden;
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-	background: transparent;
-	overflow: hidden;
-	transform-origin: 50% 0%;
-}
-
-
-#menu li:hover ul {
+@media only screen and (max-width : 1000px){ /*This code alters the format of the menu when the screen is more than 1000px.*/
 	
-	padding: 15px 0;
-	background: #6f6f6f;
-	opacity: 1;
-	visibility: visible;
-	box-shadow: 1px 1px 7px rgba(0,0,0,.5);
-	animation-name: swingdown;
-	animation-duration: 1s;
-	animation-timing-function: ease;
-}
-
-@keyframes swingdown {
-	0% {
-		opacity: .99999;
-		transform: rotateX(90deg);
+	.magic {
+		display: inline;
 	}
-
-	30% {			
-		transform: rotateX(-20deg) rotateY(5deg);
-		animation-timing-function: ease-in-out;
-	}
-
-	65% {
-		transform: rotateX(20deg) rotateY(-3deg);
-		animation-timing-function: ease-in-out;
-	}
-
-	100% {
-		transform: rotateX(0);
-		animation-timing-function: ease-in-out;
-	}
-}
-
-#menu li li a {
-	padding-left: 15px;
-	font-weight: 400;
-	color: #3b1261;
-	text-shadow: none;
-	border-top: dotted 1px transparent;
-	border-bottom: dotted 1px transparent;
-	transition: all .15s linear;
-}
-
-#menu li li a:hover {
-	color: #9975b9;
-	border-top: dotted 1px rgba(255,255,255,.15);
-	border-bottom: dotted 1px rgba(255,255,255,.15);
-	background: rgba(153,117,185,.02);
+	
 }
